push up csv-2-storymap

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
   </section>  
 
   <section class="project">
+    <a target='_blank' href="https://github.com/jebowe3/CSV-2-Storymap"><img src="images\csv-2-storymap.png" alt="A small web map application that turns your formatted CSVs into story maps that your can download and host." class="project-image" /></a>
+    <h3>CSV-2-Storymap</h3>
+    <p>A small web map application that turns your formatted CSVs into story maps that your can download and host. No subscriptions, licenses, fees, or GIS knowledge needed.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/CSV-2-Storymap/sample/sample-map.html">Iowa's Largest Cities</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/CSV-2-Storymap/tree/main/data">Access the data</a></li>
+    </ul>
+  </section>    
+
+  <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html"><img src="images\iowa-511.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
     <h3>Iowa Travel Advisories</h3>
     <p>This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications.</p>
