--- a/index.html
+++ b/index.html
@@ -139,41 +139,17 @@
     </ul>
   </section>    
 
-  <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html"><img src="images\iowa-511.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
-    <h3>Iowa Travel Advisories</h3>
-    <p>This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html">Iowa Travel Advisories</a></li>
-      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
-    </ul>
-  </section>
-  
-  <h4 style="width: 80%; margin: 30px auto; font-size: 1.25em">ArcGIS Dashboards</h3>
-
-  <section class="project">
-    <a target='_blank' href="https://www.arcgis.com/apps/dashboards/1ac554bd4e644eb4aef1234e203b6539"><img src="images\dashboard.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
-    <h3>Iowa Travel Alerts</h3>
-    <p>A slightly different approach using ArcGIS Dashboards to furnish live data from the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map shows how web map developers can enroll live data in applications build in ArcGIS Dashboards.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://www.arcgis.com/apps/dashboards/1ac554bd4e644eb4aef1234e203b6539">Iowa Travel Alerts</a></li>
-      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
-    </ul>
-  </section>      
-  
-  <h4 style="width: 80%; margin: 30px auto; font-size: 1.25em">ArcGIS Experience Builder</h3>
-
-  <section class="project">
-    <a target='_blank' href="https://experience.arcgis.com/experience/59afc0ba755941619b24d1c94af92f5e/"><img src="images\experience.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
-    <h3>Iowa Live Travel Alerts</h3>
-    <p>The same data, but furnished with ArcGIS Experience Builder. Using continually updated data from the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, this map demonstrates how to leverage ArcGIS REST service feature layers in web map applications developed in the no-code ArcGIS Experience Builder tool.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://experience.arcgis.com/experience/59afc0ba755941619b24d1c94af92f5e/">Iowa Travel Advisories</a></li>
-      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
-    </ul>
-  </section>
-
   <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Collaborations with Students & Friends</h3>
+
+   <section class="project">
+    <a target='_blank' href="https://therevolvingdoorproject.org/mapping-the-home-insurance-crisis/"><img src="images\insurance.png" alt="Mapping the home insurance crisis across America." class="project-image" /></a>
+    <h3>Mapping the Home Insurance Crisis</h3>
+    <p>An interactive map exploring the costs of climate change through rising insurance premiums, policy nonrenewals, cancellations, and claims. This map measures and presents these metrics by zip code across the nation and is powered by MapLibre GL Js and PMTiles.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://therevolvingdoorproject.org/mapping-the-home-insurance-crisis/">Mapping the Home Insurance Crisis</a></li>
+      <li>Data: <a target='_blank' href="https://drive.google.com/drive/folders/1YFyQbTQR1aUW-GUlnYdheEhjzMUTOsP1">Access the data</a></li>
+    </ul>
+  </section>  
 
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/"><img src="images\covid-update.png" alt="A web map application that parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country." class="project-image" /></a>
